--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
 
     <h1>Hello World!</h1>
-    <h2>Hello World!</h2>
+    <p>Hello World! We are software engineers</p>
+    
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
